<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="com.appworld.ugwallet.ContactUsActivity"
    android:padding="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/contact_message"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:autoLink="phone"
            android:text="@string/mtn_contact"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="20sp"
            android:autoLink="phone"
            android:text="@string/airtel_contact"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/email_heading"/>

        <RadioGroup
            android:id="@+id/feedback_types_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:padding="10dp"
            android:showDividers="middle|end">

            <RadioButton
                android:id="@+id/bug_radio_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:checked="true"
                android:drawableRight="@android:drawable/btn_radio"
                android:gravity="left|center"
                android:padding="5dp"
                android:text="@string/fdb_bug_type"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/improvement_radio_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:gravity="left|center"
                android:padding="5dp"
                android:text="@string/fdb_improvement_type"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/suggestion_radio_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:gravity="left|center"
                android:padding="5dp"
                android:text="@string/fdb_suggestion_type"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/inquiry_radio_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:button="@null"
                android:drawableRight="@android:drawable/btn_radio"
                android:gravity="left|center"
                android:padding="5dp"
                android:text="@string/fdb_inquiry_type"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp" />

        </RadioGroup>

        <Button
            android:id="@+id/write_email_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_btn_design"
            android:text="@string/send_email"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/terms_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_btn_design"
            android:text="View Terms and Conditions"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </LinearLayout>

</ScrollView>