<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SplashActivity"
    android:background="@color/splash_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="3"
                android:gravity="center_vertical|center_horizontal"
                android:layout_alignParentTop="true"
                android:id="@+id/ll1"
                android:layout_above="@+id/ll2"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/app_name"
                    android:id="@+id/textView2"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/buyTokenButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/buy_yaka_token"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:background="@drawable/blue_btn_design" />

                <Button
                    android:id="@+id/recentTransactionsButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/recent_transactions"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                <Button
                    android:textAllCaps="false"
                    android:id="@+id/registerButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/register"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <Button
                    android:textAllCaps="false"
                    android:id="@+id/signinButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/signin_btn"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <Button
                    android:id="@+id/viewHistoryButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/view_history"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/contactButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/blue_btn_design"
                    android:text="@string/contact_us"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/share_app_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1.18"
                        android:background="@drawable/green_btn_design"
                        android:text="@string/app_share"
                        android:textStyle="bold"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/rate_app_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1.18"
                        android:background="@drawable/green_btn_design"
                        android:text="@string/rate_app"
                        android:textStyle="bold"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
