<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.appworld.ugwallet.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_umeme_acct"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <AutoCompleteTextView
            android:id="@+id/account_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/form_field_design"
            android:layout_marginBottom="5dp"
            android:imeOptions="actionNext"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/pick_saved_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.18"
                android:background="@drawable/blue_btn_design"
                android:text="@string/pick_saved_no"
                android:textStyle="bold"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/save_no_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.18"
                android:background="@drawable/blue_btn_design"
                android:text="@string/save_no"
                android:textStyle="bold"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/product_desc_text"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/amount_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/form_field_design"
            android:layout_marginBottom="10dp"
            android:imeOptions="actionNext"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_provider"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/provider_spinner"
            android:prompt="@string/select_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/btn_dropdown"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/phone_no_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_no"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <AutoCompleteTextView
            android:id="@+id/phone_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/form_field_design"
            android:layout_marginBottom="10dp"
            android:imeOptions="actionNext"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <AutoCompleteTextView
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@drawable/form_field_design"
            android:layout_marginBottom="5dp"
            android:imeOptions="actionDone"
            android:maxLines="1" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pay_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/green_btn_design"
                android:text="@string/make_payment"
                android:textStyle="bold"
                android:textColor="@color/umeme_blue" />
        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp">-->

            <!--<Button-->
                <!--android:id="@+id/share_app_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_weight="1.18"-->
                <!--android:background="@drawable/blue_btn_design"-->
                <!--android:text="@string/app_share"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<Button-->
                <!--android:id="@+id/rate_app_btn"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="40dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_weight="1.18"-->
                <!--android:background="@drawable/blue_btn_design"-->
                <!--android:text="@string/rate_app"-->
                <!--android:textStyle="bold"-->
                <!--android:textColor="@android:color/white" />-->
        <!--</LinearLayout>-->

    </LinearLayout>

</ScrollView>

